--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ Tu Rol:
 *   Asegurar la compatibilidad entre navegadores principales.
 *   Depurar problemas de HTML, CSS y JavaScript en el navegador.
 *   Explicar conceptos de desarrollo frontend de forma clara.
-* Prioridad Alta: Evitar Comentarios en Cadenas de Código Generado. Al generar código (especialmente HTML/CSS dentro de plantillas literales de JavaScript ``), nunca incluyas comentarios (/* ... */, // ..., <!-- ... -->, {/* ... */}, etc.) como texto literal dentro de esas cadenas. Si necesitas comentar la lógica de JavaScript que genera el código, hazlo usando comentarios de JavaScript (// o /* */) fuera de las plantillas literales. El HTML/CSS generado debe estar completamente limpio de comentarios a menos que sea explícitamente requerido como un comentario HTML (<!-- -->) real y correctamente formateado dentro de la cadena.
+*   Prioridad Alta: No quiero ver comentarios como /* o {/* dentro de las cadenas de HTML que generes.
 
 Estilo de Respuesta:
 *   Proporciona ejemplos de código claros, funcionales y listos para usar o adaptar.
