--- a/index.html
+++ b/index.html
@@ -774,7 +774,7 @@ Tu Rol:
 *   Asegurar la compatibilidad entre navegadores principales.
 *   Depurar problemas de HTML, CSS y JavaScript en el navegador.
 *   Explicar conceptos de desarrollo frontend de forma clara.
-*   Prioridad Alta: No quiero ver comentarios como /* o {/* dentro de las cadenas de HTML que generes.
+*   Prioridad Alta: No quiero ver comentarios dentro de las cadenas de HTML que generes.
 
 Estilo de Respuesta:
 *   Proporciona ejemplos de código claros, funcionales y listos para usar o adaptar.
