--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
             </div>
           </div>
           <div class="col">
-            <div
+            <div>
               class="prompt-card"
               data-prompt-id="fullstack"
               data-bs-toggle="modal"
