--- a/index.html
+++ b/index.html
@@ -163,12 +163,11 @@
             </div>
           </div>
           <div class="col">
-            <div>
+            <div
               class="prompt-card"
               data-prompt-id="fullstack"
               data-bs-toggle="modal"
-              data-bs-target="#promptModal"
-            >
+              data-bs-target="#promptModal">
               <h5>Full Stack</h5>
             </div>
           </div>
@@ -195,11 +194,9 @@
           <div class="col">
             <div
               class="prompt-card"
-              data-prompt-id="ai-mvp-specifier" <!-- ID que coincide con JS -->
+              data-prompt-id="ai-mvp-specifier" 
               data-bs-toggle="modal"
-              data-bs-target="#promptModal"
-            >
-              <!-- Título que coincide con JS -->
+              data-bs-target="#promptModal">
               <h5>AI MVP Specifier</h5>
             </div>
           </div>
